<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
       />

    <ScrollView
        android:layout_marginTop="?attr/actionBarSize"
        android:id="@+id/scrollViewMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
      >

        <LinearLayout

            android:id="@+id/mainLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"


                android:text="@string/ricetta"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold|italic"
                android:layout_marginStart="10dp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/nomeRicetta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/recipeName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:cursorVisible="true"
                    android:hint="@string/nome_ricetta"

                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/black"
                    android:textColorLink="@android:color/black"
                    android:textCursorDrawable="@null"
                    android:textStyle="bold|italic" />
                <!-- android:textAllCaps="true" -->

            </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                android:id="@+id/numeroPersone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/recipeNPeople"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:hint="@string/numero_persone"
                    android:textAllCaps="true"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/black"
                    android:textStyle="bold|italic" />
            </android.support.design.widget.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewKcal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/valori_nutrizionali"
                    android:textAllCaps="true"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold|italic"
                    android:layout_marginStart="10dp" />

                <Switch
                    android:id="@+id/switchKcal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:paddingRight="20dp"
                    android:paddingEnd="20dp" />
            </LinearLayout>


            <RelativeLayout
                android:id="@+id/nutritionLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/textCategoria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/categoria"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold|italic"
                android:layout_marginStart="10dp" />

            <Spinner
                android:id="@+id/categorySpinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:textColor="@android:color/darker_gray"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="10dp" />


            <LinearLayout
                android:id="@+id/ingredientiRicetta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/ingredienti"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/ingredienti"
                    android:textAllCaps="true"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold|italic" />


                <ImageButton
                    android:id="@+id/ingredientsButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="150dp"
                    android:layout_marginLeft="150dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/mybutton_blue"
                    app:srcCompat="@android:drawable/ic_input_add" />

            </LinearLayout>

            <TextView
                android:id="@+id/ingredientMultiLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:maxLines="50"
                android:minLines="0" />

            <LinearLayout
                android:id="@+id/tagsRicetta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tags"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:paddingRight="78dp"
                    android:text="@string/tags"
                    android:textAllCaps="true"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold|italic"
                    android:paddingEnd="78dp" />


                <ImageButton
                    android:id="@+id/tagsButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="150dp"
                    android:layout_marginLeft="150dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/mybutton_blue"
                    app:srcCompat="@android:drawable/ic_input_add" />

            </LinearLayout>



            <TextView
                android:id="@+id/tagsLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp" />

            <TextView
                android:id="@+id/txtDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="DESCRIZIONE:"
                android:layout_marginLeft="10dp"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold|italic"
                android:layout_marginStart="10dp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/descrizioneRicetta"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/recipeDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:hint="@string/descrizione_ricetta" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/immaginiView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/immagini"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold|italic"
                android:layout_marginStart="10dp" />


            <LinearLayout
                android:id="@+id/LinearHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">


                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="wrap_content"
                    android:layout_height="112dp"
                    android:layout_marginLeft="20dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ic_action_name"
                    android:layout_marginStart="20dp" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="112dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ic_action_name"  />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="112dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/ic_action_name"
                    android:layout_marginEnd="20dp" />
            </LinearLayout>

            <Button
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/mybutton_blue"
                android:text="@string/salva_ricetta"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>


