<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@android:color/background_light"
    android:orientation="vertical"
    android:weightSum="4"
    tools:context=".AddActivity">


    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView

                android:id="@+id/textRecipe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/ecco_un_idea_per_il_tuo_pasto"
                android:textColor="@android:color/background_dark"
                android:textSize="24dp" />


            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"

                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"

                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <com.jcminarro.roundkornerlayout.RoundKornerRelativeLayout
                            android:id="@+id/layoutRounded1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="#fff"
                            app:corner_radius="30dp">

                            <ImageView
                                android:id="@+id/imageView1"
                                android:layout_width="wrap_content"
                                android:layout_height="220dp"
                                android:scaleType="centerCrop" />

                        </com.jcminarro.roundkornerlayout.RoundKornerRelativeLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/imageLayout2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="4dp"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <com.jcminarro.roundkornerlayout.RoundKornerRelativeLayout
                            android:id="@+id/layoutRounded2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="#fff"
                            app:corner_radius="30dp">

                            <ImageView
                                android:id="@+id/imageView2"
                                android:layout_width="wrap_content"
                                android:layout_height="220dp"
                                android:scaleType="centerCrop" />


                        </com.jcminarro.roundkornerlayout.RoundKornerRelativeLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/imageLayout3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="4dp"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <com.jcminarro.roundkornerlayout.RoundKornerRelativeLayout
                            android:id="@+id/layoutRounded3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="#fff"
                            app:corner_radius="30dp">

                            <ImageView
                                android:id="@+id/imageView3"
                                android:layout_width="wrap_content"
                                android:layout_height="220dp" />

                        </com.jcminarro.roundkornerlayout.RoundKornerRelativeLayout>
                    </LinearLayout>
                </LinearLayout>
            </HorizontalScrollView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/recipeName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:textAllCaps="true"
                    android:textColor="@android:color/background_dark"
                    android:textColorLink="@android:color/black"
                    android:textSize="22sp"
                    android:textStyle="bold|italic" />

                <TextView
                    android:id="@+id/recipeNPersone"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:paddingLeft="30dp"
                    android:textColor="@android:color/darker_gray"
                    android:textColorLink="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold|italic" />

                <TextView
                    android:id="@+id/txtIngredients"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="@string/ingredienti"
                    android:textAllCaps="true"
                    android:textColor="@android:color/background_dark"
                    android:textSize="22sp"
                    android:textStyle="bold|italic" />

                <TextView
                    android:id="@+id/recipeIngredients"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textDescrizione"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/descrizione"
                    android:textAllCaps="true"
                    android:textColor="@android:color/background_dark"
                    android:textColorLink="@android:color/black"
                    android:textSize="22sp"
                    android:textStyle="bold|italic" />

                <TextView
                    android:id="@+id/recipeDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="30dp"
                    android:textSize="18sp" />


            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</LinearLayout>




